src/css/languageforge/default/lf.css
/* ... */
div.vote a.disabled {
	color: #eee;
}

div.vote span {
	font-size: 24px;
	font-weight: bold;
	color: #999;
}
/*
div.answer {
	vertical-align: top;
	margin: 12px 0 0 18px;
}
*/
div.answer div.by {
	background: #eee;
	margin: 8px 0 0 0;
	vertical-align: top;
	width: 260px;
}

div.answer div.by img {
	xdisplay: inline-block;
	border: 2px solid white;
	margin: 4px;
	vertical-align: top;
}

div.answer div.by div {
	display: inline-block;
	margin: 6px 0 4px 4px;
	vertical-align: middle;
	line-height: 1.2em;
	color: #666;
}

div#comments table.comments textarea {
	width: 95%;
}

div#comments table.comments td {
	border-top: 1px solid #eee;
	border-bottom: 1px solid #eee;
}

/* Settings */
div.picklists li {
	cursor: pointer;
	padding-left: 5px;
}
div.picklists li:hover {
	background-color: #EEE;
}
div.picklists li.selected {
	background-color: #DDD;
}

dl.picklists {
	margin-top: 0px;
}
dl.picklists div {
	cursor: pointer;
}
dl.picklists div div:hover {
	background-color: #EEE;
}
dl.picklists div.selected {
	background-color: #DDD;
}
dl.picklists dd {
	padding-left: 5px;
}
dl#fields {
	margin-top: 5px;
}

.indent1 {
	padding-left: 20px;
}

.modal {
	width: 940px;
	margin-left: -470px;
}

td.primary > div { width: 200px; height: 20px; }
td.container > div { width: 100%; height: 20px; overflow:hidden; }

/* New Item under ribbon bar */
div.new-item form {
	margin: 20px 0 0 0;
}

.activity-date {
	font-size:12px;
}

.activity-icon {
	text-align:center;
}

.activity-content i.icon-quote-left {
	font-size: 12px;
	margin-left:5px;
	position:relative;
	top: -5px;
}

 .activity-content i.icon-quote-right {
	font-size: 12px;
	position:relative;
	margin-right: 5px;
	top: -5px;
}

.activity-content p {
	margin-top:10px;
}

.activity-content hr {
	margin: 5px 0 5px 0;
}

.activity-content .indented {
	margin-left:20px;
}

/* Table / Grid styles */
table select {
	margin-bottom: 0px;
}

li.typeahead-item {
	height:1.8em;
	min-width:170px;
}

.img-typeahead-item {
	width:32px;
}

